Formatting & branch changed
Added __main__.py for when module is called directly from python site packages.

--- a/TODO
+++ b/TODO
@@ -3,3 +3,9 @@ Example in main
 
 Create a brief example of how to use the module (once more is comleted) in the
 main.py file.
+
+
+Add pip setup
+-------------
+
+Setup file for pip for PyPi package.
