--- a/TODO
+++ b/TODO
@@ -5,7 +5,8 @@ Add some methods in Tags or [and] Safebooru classes for parsing data from
 tags. This applies to Posts as well I guess, more methods for Posts too.
 
 
-Add pip setup
--------------
+Improve unit-tests
+------------------
 
-Setup file for pip for PyPi package.
+Improve the request related tests by incorporating mocking/ mock objects.
+
